# calculadora_de_strings

./: CMakeLists.txt  divisor.h  logica.h  main.cpp  sub_x.h
